test/compile_errors/stage1/obj/sub_overflow_in_function_evaluation.zig
const y = sub(10, 20);
fn sub(a: u16, b: u16) u16 {
    return a - b;
}

export fn entry() usize { return @sizeOf(@TypeOf(y)); }

// sub overflow in function evaluation
//
// tmp.zig:3:14: error: operation caused overflow
